<resources>
    <string name="app_name">Coast Dove</string>

    <!-- Main Activity -->
    <string name="accessibility_services_menu">Accessibility services</string>
    <string name="export_database">Export database</string>
    <string name="database_exported">Database exported</string>
    <string name="add_app">Add</string>

    <!-- Add App Activity -->
    <string name="add_detectable_app">Add Detectable App</string>
    <string name="add_app_parsing_resources">Parsing resources&#8230;</string>
    <string name="add_app_reading_apk">Reading .apk file&#8230;</string>
    <string name="add_app_setting_up_layouts">Setting up layouts&#8230;</string>
    <string name="add_app_cancelling">Cancelling&#8230;</string>
    <!-- Add App Notifications -->
    <string name="add_app_notification_loading">Setting up layouts</string>
    <string name="add_app_notification_finished_loading">Finished setting up layouts</string>

    <!-- Detectable App Details -->
    <string name="activate">Activate</string>
    <string name="activate_no_cache">Add app to activate</string>
    <string name="accuracy_warning">Accuracy is . Consider rebuilding the cache.</string>
    <string name="activate_accessibility">Click to activate accessibility service</string>
    <string name="loading">Loading</string>
    <string name="detect_layouts">Detect layouts</string>
    <string name="detect_interactions">Detect interactions</string>
    <string name="detect_screen_state">Detect screen state</string>
    <string name="detect_notifications">Detect notifications</string>
    <string name="detect_activities">Detect activities</string>
    <string name="replace_private_data">Replace private data</string>
    <string name="delete_replacement_mapping">Delete replacement mapping</string>
    <string name="delete_cache">Delete cache</string>
    <!-- Detectable App Notifications -->
    <string name="notification_loading_1">Loading data for</string>
    <string name="notification_loading_2"></string>
    <string name="notification_finished_loading_1">Data loaded for</string>
    <string name="notification_finished_loading_2"></string>

    <!-- App Usage Data Details -->
    <string name="export_to_txt">Export to txt</string>
    <string name="delete">Delete</string>
    <string name="toast_saved_to_txt">Saved</string>
    <string name="toast_file_exists">File exists</string>
    <string name="toast_file_deleted">File deleted</string>
    <string name="toast_data_removed">Data removed</string>

    <string name="meta_entry_activity">Activity</string>
    <string name="data_entry_layout">Layout</string>
    <string name="data_entry_click">Click</string>
    <string name="data_entry_scroll">Scrolling</string>

</resources>
