<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/checkbox_detect_layouts"
        android:title="@string/detect_layouts"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/checkbox_detect_interactions"
        android:title="@string/detect_interactions"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/checkbox_detect_screen_state"
        android:title="@string/detect_screen_state"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/checkbox_detect_notifications"
        android:title="@string/detect_notifications"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/checkbox_replace_private_data"
        android:title="@string/replace_private_data"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/item_delete_replacement_mapping"
        android:title="@string/delete_replacement_mapping"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_delete_cache"
        android:title="@string/delete_cache"
        app:showAsAction="never"/>



</menu>