<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detectable_app_details.DetectableAppDetailsActivity"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detectable_app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_floating_material_dark"
        android:clickable="true"
        android:id="@+id/detectable_app_activation_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activate"
            android:id="@+id/detectable_app_activate_text"
            android:layout_gravity="center_vertical"
            android:textColor="@color/abc_primary_text_material_dark"
            android:layout_marginLeft="16dp"
            android:clickable="true" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detectable_app_activate_switch"
            android:layout_gravity="right"
            android:checked="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detectable_app_progress_bar"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="-8dp"
            android:layout_marginTop="-4dp" />

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detectable_app_accuracy_warning_bar"
        android:background="@color/background_floating_material_dark"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accuracy_warning"
            android:id="@+id/detectable_app_accuracy_warning_text"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/abc_primary_text_material_dark" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detectable_app_accessibility_activation_bar"
        android:background="@color/accent_material_dark"
        android:clickable="true"
        android:onClick="openAccessibilityServicesMenu"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_accessibility"
            android:id="@+id/activate_accessibility_service_text"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:onClick="openAccessibilityServicesMenu"
            android:clickable="true" />
    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="simonlang.coastdove.core.ui.detectable_app_details.AppUsageDataListFragment"
        android:id="@+id/fragment_app_usage_data_file_list"
        android:layout_gravity="center_horizontal"
        tools:layout="@android:layout/list_content" />

</LinearLayout>
